Kinda works. Invisible list items needs a fix

--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,7 @@
 * {
   /* outline: 2px solid red; */
 }
+
+.done {
+  text-decoration: line-through;
+}
